# compecon

./: .gitignore  Cargo.toml  ECS_INSTRUCT.md  INSTRUCT.md  INSTRUCTIONS.md  NEW_INSTRUCT.md  NEW_INSTRUCTIONS.md  README.md  dependency-reduced-pom.xml  macro_stats.parquet  pom.xml  repomix-output.xml
src/: abm.rs  main.rs
src/arithmodynamics/: mod.rs  tests.rs
src/economy/: finance.rs  mod.rs
src/engine/: dashboard.rs  mod.rs  statistics.rs
src/engine/market/: mod.rs
src/engine/systems/: factory.rs  finance.rs  household.rs  mod.rs  state.rs  trader.rs
src/main/java/io/github/uwol/compecon/: Main.java  Reproduction.java
src/main/java/io/github/uwol/compecon/dashboard/: Dashboard.java
src/main/java/io/github/uwol/compecon/dashboard/model/: ControlModel.java
src/main/java/io/github/uwol/compecon/economy/: LifecycleEntity.java
src/main/java/io/github/uwol/compecon/engine/log/: Log.java
src/main/java/io/github/uwol/compecon/jmx/: JMXRegistration.java  JmxNumberOfAgentsModel.java  JmxNumberOfAgentsModelMBean.java
src/main/java/io/github/uwol/compecon/math/: ConvexFunction.java  Function.java
src/main/resources/: nodependencies.configuration.properties
src/math/: mod.rs  optimize.rs
src/src/main/resources/: interdependencies.configuration.properties  minimal.configuration.properties
src/telemetry/: mod.rs
src/test/java/io/github/uwol/compecon/: CompEconTestSuite.java  CompEconTestSupport.java
src/test/java/io/github/uwol/compecon/math/: CESFunctionTest.java  CobbDouglasFunctionTest.java
src/test/resources/: testing.configuration.properties
(+235 files in other folders)
