[package]
name = "compecon-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
crossbeam = "0.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
parquet = "54.0"
arrow = "54.0"
hecs = "0.10"
num-integer = "0.1"
num-traits = "0.2"
hashbrown = "0.14"
indexmap = "2.2"
